Malcolm McRoberts <mmcroberts@ideorlando.org>
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@53794 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1776,7 +1776,8 @@ Ted Mules <ned@technisyst.com.au>
 Mike Hepburn <mike@anvil.com>
 Dale Wilson  <wilson_d@ociweb.com>
 Thomas Girard <thomas.g.girard@free.fr>
- 
+Malcolm McRoberts <mmcroberts@ideorlando.org>
+
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
 scheme that underlies this distribution and also spent countless hours
