--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sat Nov 22 21:07:09 2003  Kobi Cohen-Arazi  <kobi-co@barak-online.net>
+
+	* ace/OS_NS_Thread.h : 
+
+	Added "&& !defined (ACE_DEFAULT_THREAD_KEYS)". 
+	Problems occurs on win2k/XP when OS support up to 1024 slots, 
+	but MS-sdk defines TLS_MINIMUM_AVAILABLE as 64. Now, Win2k/XP Users can 
+	raise that number, define-ing ACE_DEFAULT_THREAD_KEYS as 1024 e.g..
+
 Sat Nov 22 11:18:38 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
  	* ace/Service_Object.{h,cpp}:
