Added Task_Ex_T file
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@53809 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Sat Nov 22 22:03:34 2003  Kobi Cohen-Arazi  <kobi-co@barak-online.net>
+
+	* ace/ace.mpc: 
+
+	Added Task_Ex_T file
+
+Sat Nov 22 22:00:15 2003  Kobi Cohen-Arazi  <kobi-co@barak-online.net>
+
+	* ace/Task_Ex_T.h:
+	* ace/Task_Ex_T.i: 	
+	* ace/Task_Ex_T.cpp: 
+
+	Added support for ACE_Task with Use define Message template parameter
+
 Sat Nov 22 21:07:09 2003  Kobi Cohen-Arazi  <kobi-co@barak-online.net>
 
 	* ace/OS_NS_Thread.h : 
