--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,10 @@
+Mon Nov 24 12:33:49 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* orbsvcs/orbsvcs/Makefile:
+
+	  Add ORBSVCS_COMPONENTS to he standard_targets. This will force
+	  the make to spit the file with the components that were built. 
+
 Mon Nov 24 17:29:30 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * rules.tao.GNU:
