*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@54009 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Nov 27 16:51:31 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* tests/ARGV_Test.cpp:
+
+	  Fixed compile errors on Win32.
+
 Thu Nov 27 10:51:00 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * include/makeinclude/rules.bin.GNU:
