--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,6 +1,63 @@
-Thu Nov 27 16:12:32 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+Thu Nov 27 17:41:21 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* orbsvcs/ImplRepo_Service/implrepo.dsp: 
+	* orbsvcs/ImplRepo_Service/tao_imr.dsp: 
+	* orbsvcs/tests/Notify/Basic/AdminProperties.dsp: 
+	* orbsvcs/tests/Notify/Basic/Filter.dsp: 
+	* orbsvcs/tests/Notify/Basic/MultiTypes.dsp: 
+	* orbsvcs/tests/Notify/Basic/Updates.dsp: 
+	* orbsvcs/tests/Notify/Blocking/Structured_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Blocking/Structured_Supplier.dsp: 
+	* orbsvcs/tests/Notify/Discarding/Sequence_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Discarding/Sequence_Supplier.dsp: 
+	* orbsvcs/tests/Notify/Discarding/Structured_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Discarding/Structured_Supplier.dsp: 
+	* orbsvcs/tests/Notify/Driver/Driver.dsp: 
+	* orbsvcs/tests/Notify/MT_Dispatching/Structured_Consumer.dsp: 
+	* orbsvcs/tests/Notify/MT_Dispatching/Structured_Supplier.dsp: 
+	* orbsvcs/tests/Notify/Ordering/Sequence_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Ordering/Sequence_Supplier.dsp: 
+	* orbsvcs/tests/Notify/Ordering/Structured_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Ordering/Structured_Supplier.dsp: 
+	* orbsvcs/tests/Notify/RT_lib/TAO_RT_NotifyTests.dsp: 
+	* orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/Sequence_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/Sequence_Supplier.dsp: 
+	* orbsvcs/tests/Notify/Sequence_Multi_Filter/Sequence_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Sequence_Multi_Filter/Sequence_Supplier.dsp: 
+	* orbsvcs/tests/Notify/Structured_Filter/Structured_Filter_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Structured_Filter/Structured_Filter_Supplier.dsp: 
+	* orbsvcs/tests/Notify/Structured_Multi_Filter/Structured_Multi_Filter_Consumer.dsp: 
+	* orbsvcs/tests/Notify/Structured_Multi_Filter/Structured_Multi_Filter_Supplier.dsp: 
+	* orbsvcs/tests/Notify/lib/TAO_NotifyTests.dsp: 
+	* orbsvcs/tests/Notify/performance-tests/Filter/Sequence_Consumer.dsp: 
+	* orbsvcs/tests/Notify/performance-tests/Filter/Sequence_Supplier.dsp: 
+	* orbsvcs/tests/Notify/performance-tests/Filter/Structured_Consumer.dsp: 
+	* orbsvcs/tests/Notify/performance-tests/Filter/Structured_Supplier.dsp: 
+	* orbsvcs/tests/Notify/performance-tests/RedGreen/RedGreen.dsp: 
+	* orbsvcs/tests/Sched_Conf/Sched_Conf.dsp: 
+	* orbsvcs/tests/Sched_Conf/Sched_Conf_Anomalies.dsp: 
+	* orbsvcs/tests/Sched_Conf/Sched_Conf_Runtime.cpp 
+	* orbsvcs/tests/Sched_Conf/Sched_Conf_Runtime.dsp: 
+	* orbsvcs/tests/Security/Big_Request/client.cpp 
+	* orbsvcs/tests/Security/Big_Request/server.cpp 
+	* orbsvcs/tests/Security/Crash_Test/Crash_Test_Client.dsp: 
+	* orbsvcs/tests/Security/Crash_Test/Crash_Test_Server.dsp: 
+	* orbsvcs/tests/Security/Crash_Test/client.cpp 
+	* orbsvcs/tests/Security/Crash_Test/server.cpp 
+	* orbsvcs/tests/Security/MT_SSLIOP/client.dsp: 
+	* orbsvcs/tests/Security/MT_SSLIOP/server.dsp: 
+
+	  Another set of fixes for the dsp files. 
+
+	* orbsvcs/tests/Security/MT_SSLIOP/test_i.cpp:
+	* orbsvcs/tests/Security/SecurityLevel1/SLevel1_Test_i.cpp:
+	* orbsvcs/tests/Security/SecurityLevel1/server.cpp:
+	 
+	  Additional includes needed to get it compiling on Win32. 
+
+Thu Nov 27 16:12:32 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* orbsvcs/ImplRepo_Service/implrepo.dsp:
 	* orbsvcs/ImplRepo_Service/tao_imr.dsp: 
 	* orbsvcs/tests/Notify/Basic/AdminProperties.dsp: 
 	* orbsvcs/tests/Notify/Basic/ConnectDisconnect.dsp: 
