Added Task_Ex_Test to Makefile.am and tests.dsw, Added Task_Ex_Test.icc, Task_Ex_Test.dsp
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@54091 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sun Nov 30 10:22:29 2003  Kobi Cohen-Arazi  <kobi-co@barak-online.net>
+
+	* tests/tests.dsw: 
+	* tests/Task_Ex_Test.icc: 
+	* tests/Task_Ex_Test.dsp: 
+	* tests/Makefile.am: 
+	Added Task_Ex_Test to Makefile.am and tests.dsw
+	Added Task_Ex_Test.icc, Task_Ex_Test.dsp
+
 Sat Nov 29 15:25:36 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * ace/config-lite.h: (new file)
