fix in tests/Task_Ex_Test.cpp for AIX
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@54136 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Mon Dec  1 22:04:37 2003  Kobi Cohen-Arazi  <kobi-co@barak-online.net>
+
+	* tests/Task_Ex_Test.cpp: 
+	Move User_Defined_Msg class to Task_Ex_Test.h.
+	
+	* tests/Task_Ex_Test.dsp: 
+	Add Task_Ex_Test.h to dsp.
+	
+	* tests/Task_Ex_Test.h: 
+	Added to fix problems with AIX IBM and Template instantiations.
+
 Mon Dec  1 13:03:50 2003  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/modules/Creator.pm:
