Fix ACE_Task_Ex::reply and ACE_Task_Ex::put_next to return -1. No support (yet) of ACE_Stream with ACE_Task_Ex
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@54261 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec  4 14:30:44 2003  Kobi Cohen-Arazi  <kcarazi@finjan.com>
+
+	* ace/Task_Ex_T.i (reply, put_next): 
+	Thses 2 funcitons releted to ACE_Stream Framework,
+	doesn't work with new ACE_Task_Ex (yet)
+
 Wed Dec  3 23:37:59 2003  Kobi Cohen-Arazi  <kobi-co@barak-online.net>
 
 	* ace/Task_Ex_T.h:
