--- a/ChangeLog
+++ b/ChangeLog
@@ -14,11 +14,11 @@ Thu Dec  4 17:13:29 2003  Steve Huston  <shuston@riverace.com>
 	* m4/compiler.m4: Added a conditional set around CFLAGS on HP-UX,
 	  trying to silence a sh diagnostic at configure time. Didn't work...
 	  Added +p to WERROR for HP aC++. Allows "future error" warnings
-	  to be noted as errrors. Now can properly detect non-const 5th
+	  to be noted as errors. Now can properly detect non-const 5th
 	  arg to select().
 
 	* m4/tls.m4: Moved AM_CONDITIONAL(BUILD_SSL) outside of the test
-	  $ac_cv_openssl_libs. THis makes sure BUILD_SSL gets set properly
+	  $ac_cv_openssl_libs. This makes sure BUILD_SSL gets set properly
 	  whether or not with-ssl is set.
 
 	* ace/OS_NS_Thread.cpp (rwlock_init): Added
