--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,14 @@
+Tue Dec  9 11:37:44 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* tao/extra_core.mpb:
+	  
+	  For some reason there are so many places where we have hardcoded
+	  that  minimum_corba means no messaging. This is atrocious :-). 
+	
+	* tests/Bug_1639_Regression/test.mpc: 
+
+	  Cleaned the MPC file. 
+
 Tue Dec  9 17:24:01 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* orbsvcs/performance-tests/RTEvent/Federated_Roundtrip/client.dsp:
