--- a/THANKS
+++ b/THANKS
@@ -1785,6 +1785,7 @@ Alan l Batongbacal <alanlb@vt.edu>
 Gary Maxey <gary.maxey@hp.com>
 Yoav Borer <yoav.borer@data-pod.com>
 A. Kleibeuker <kleibeuk@natlab.research.philips.com>
+Andy Bellafaire <Andy_M_Bellafaire@raytheon.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
