--- a/ChangeLog
+++ b/ChangeLog
@@ -26,7 +26,7 @@ Wed Dec 10 07:18:44 2003  Chad Elliott  <elliott_c@ociweb.com>
 Wed Dec 10 13:17:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/IPC_SAP/SSL_SAP/SSL-server-poll.cpp:
-          Added #include of ace/OS_NS_poll to get poll stuff
+          Added #include of ace/OS_NS_poll.h to get poll() stuff.
 
 Wed Dec 10 07:09:10 2003  Chad Elliott  <elliott_c@ociweb.com>
 
