*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@54571 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1786,6 +1786,7 @@ Gary Maxey <gary.maxey@hp.com>
 Yoav Borer <yoav.borer@data-pod.com>
 Andre Kleibeuker <kleibeuk@natlab.research.philips.com>
 Andy Bellafaire <Andy_M_Bellafaire@raytheon.com>
+Pierre Pacchioni <pierre.pacchioni@avisto.com>
 John Fletcher <john.fletcher@rd.bbc.co.uk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
