--- a/THANKS
+++ b/THANKS
@@ -1788,6 +1788,7 @@ Andre Kleibeuker <kleibeuk@natlab.research.philips.com>
 Andy Bellafaire <Andy_M_Bellafaire@raytheon.com>
 Pierre Pacchioni <pierre.pacchioni@avisto.com>
 John Fletcher <john.fletcher@rd.bbc.co.uk>
+Terry Ware <terry.ware@dc.alphatech.com>
 Pierre Pacchioni <pierre.pacchioni@avisto.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
