--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 18 09:53:31 2003  Balachandran  <bala@dre.vanderbilt.edu>
+
+        * ACE version 5.3.6 released.
+
 Thu Dec 18 08:45:06 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* bin/make_release:
