--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 18 09:54:36 2003  Balachandran  <bala@dre.vanderbilt.edu>
+
+        * TAO version 1.3.6 released.
+
 Wed Dec 17 12:13:51 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* orbsvcs/orbsvcs/IFRService/IFR_BaseS.cpp:
