*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@54655 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1789,6 +1789,7 @@ Andy Bellafaire <Andy_M_Bellafaire@raytheon.com>
 Pierre Pacchioni <pierre.pacchioni@avisto.com>
 John Fletcher <john.fletcher@rd.bbc.co.uk>
 Terry Ware <terry.ware@dc.alphatech.com>
+Roger Beathard <rbeathar@cisco.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
